--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "node-fetch": "^3.3.2",
+    "readline": "^1.3.0"
+  }
 }
