--- a/apps/Ingres-Agent/package.json
+++ b/apps/Ingres-Agent/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@google/genai": "^1.26.0",
     "@google/generative-ai": "^0.24.1",
-    "axios": "^1.12.2"
+    "@types/express": "^5.0.4",
+    "axios": "^1.12.2",
+    "express": "^5.1.0"
   }
 }
