--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@prisma/client": "^6.18.0",
     "node-fetch": "^3.3.2",
     "readline": "^1.3.0"
   }
