--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "prettier": "^3.6.2",
     "turbo": "^2.5.8",
     "typescript": "5.9.2"
@@ -24,7 +25,14 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.18.0",
+    "crypto": "^1.0.1",
+    "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "zod": "^4.1.12"
+  },
+  "resolutions": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
