--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"tsc -b",
+    "build":"prisma generate && tsc -b",
     "dev":"npm run build && node dist/index.js"
   },
   "keywords": [],
