--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -8,6 +8,10 @@
     "build":"prisma generate && tsc -b",
     "dev":"npm run build && node dist/index.js"
   },
+  "dependencies": {
+    "@prisma/client": "^6.18.0",
+    "prisma": "^6.18.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
